<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:orientation="vertical">

    <Button
        android:text="@string/buttonNet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonInternet"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="33dp"
        android:layout_alignLeft="@+id/buttonCall"
        android:layout_alignStart="@+id/buttonCall" />

    <Button
        android:text="@string/buttonCall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonCall"
        android:layout_above="@+id/buttonInternet"
        android:layout_alignLeft="@+id/buttonResult"
        android:layout_alignStart="@+id/buttonResult" />

    <Button
        android:text="@string/button"
        android:layout_width="166dp"
        android:layout_height="65dp"
        android:id="@+id/buttonResult"
        android:layout_above="@+id/buttonCall"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>